<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_post_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/action_refresh"/>
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share"
        android:showAsAction="ifRoom"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_reply"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_reply"/>
    <item
        android:id="@+id/action_onelm"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_onelm"/>
    <item
        android:id="@+id/action_selectp"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_selectp"/>
    <item
        android:id="@+id/action_favour"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_favour"/>
    <item
        android:id="@+id/action_good"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_good"/>
    <item
        android:id="@+id/action_bad"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_bad"/>
    <item
        android:id="@+id/action_poll"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:enabled="false"
        android:title="@string/action_poll"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item
        android:id="@+id/action_finish"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_finish2"/>

</menu>