<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_clear"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_clear"/>
    <item
        android:id="@+id/action_select"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:enabled="true"
        android:title="@string/action_select"/>
    <item
        android:id="@+id/action_save"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_save"/>
    <item
        android:id="@+id/action_upload"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_upload"/>
    <item
        android:id="@+id/action_undo"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_undo"/>
    <item
        android:id="@+id/action_exit"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_exit"/>

</menu>